feat:added swag doc for DeleteUserByID
